add export to PNG

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="container-fluid">
-    <div class="row" style="padding-top: 20px;">
+    <div class="row" style="padding-top: 30px;">
       <div class="col-md-8">
         <div id="svgcontainer"></div>
       </div>
@@ -82,14 +82,13 @@
 </script><script src="http://d3js.org/d3.v3.min.js" type="text/javascript">
 </script><script src="../CensusAPI_Map/assets/js/datatree.js" type="text/javascript">
 </script><script src="js/createQuadrantChart.js" type="text/javascript">  
+</script><script src="js/saveSvgAsPng.js" type="text/javascript">    
 </script><script src="js/app.js" type="text/javascript">
 </script>
 
   <div id="datadiv">
     <p><b>Data:</b> <a href="http://www.census.gov/acs/www/" target="_blank">ACS
-    2009-2013 5-Year Estimates</a></p>
-
-    <p><b>Created by:</b> <a href="http://www.colorado.gov/demography" target=
+    2009-2013 5-Year Estimates</a>&nbsp;&nbsp;&nbsp;<b>Created by:</b> <a href="http://www.colorado.gov/demography" target=
     "_blank">Colorado State Demography Office</a></p>
   </div>
 </body>
