--- a/index.html
+++ b/index.html
@@ -90,21 +90,23 @@
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
         <h4 class="modal-title">Style Options</h4>
-      </div>
+      </div>        
+      <form action="" onsubmit="return false;">
       <div class="modal-body firstdiv"><br />
-        <table>
+
+        <table>          
           <tr><td>Height (px):</td><td><input id="i_height" value=600 type="number"  min="50" max="2000" step="50" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Width (px):</td><td><input id="i_width" value="800"  min="50" max="2000" step="50" type="number" /></td></tr>
           <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>
           <tr><td>Top Buffer (px):</td><td><input id="i_topbuffer" value="60" type="number" min="0" max="200" step="10" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Bottom Buffer (px):</td><td><input id="i_bottombuffer" value="60" type="number"  min="0" max="200" step="10" /></td></tr>
           <tr><td>Left Buffer (px):</td><td><input id="i_leftbuffer" value="100" type="number"  min="0" max="200" step="10" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Right Buffer (px):</td><td><input id="i_rightbuffer" value="40" type="number"  min="0" max="200" step="10" /></td></tr>    
           <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>          
-          <tr><td>Title:</td><td><input id="i_title" value="" type="text" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Title Font Size (px):</td><td><input id="i_titlefontsize" value="24" type="number" /></td></tr>       
+          <tr><td>Title:</td><td><input id="i_title" value="" type="text" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Title Font Size (px):</td><td><input id="i_titlefontsize" value="24" type="number"  min="4" max="80" /></td></tr>       
           <tr><td>Title Font Color:</td><td><input id="i_titlefontcolor" value="#000000" type="color" /></td><td></td><td></td></tr>
           <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>       
           <tr><td>X Axis Label:</td><td><input id="i_xaxislabel" value="" type="text" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Y Axis Label:</td><td><input id="i_yaxislabel" value="" type="text" /></td></tr>  
           <tr><td>Axis Label Font Size (px):</td><td><input id="i_axislabelfontsize" value="20" type="number" min="4" max="50" step="1" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Axis Label Color:</td><td><input id="i_axislabelcolor" value="#000000" type="color" /></td></tr>  
           <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>       
-          <tr><td>Axis Line Width (px):</td><td><input id="i_axislineewidth" value="1" type="text"  min="0" max="4" step="0.5" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Axis Line Color:</td><td><input id="i_axislinecolor" value="#000000" type="color" /></td></tr>  
+          <tr><td>Axis Line Width (px):</td><td><input id="i_axislinewidth" value="1" type="number"  min="0" max="4" step="0.5" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Axis Line Color:</td><td><input id="i_axislinecolor" value="#000000" type="color" /></td></tr>  
           <tr><td>Axis Opacity (0-1):</td><td><input id="i_axisopacity" value="0.5" min="0" max="1"  step="0.1" type="number" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Axis Text Size (px):</td><td><input id="i_axistextsize" value="10" type="number"  min="4" max="50" step="1" /></td></tr>  
           <tr><td>Axis Text Color:</td><td><input id="i_axistextcolor" value="#000000" type="color" /></td><td></td><td></td></tr>
           <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>    
@@ -115,15 +117,13 @@
           <tr><td>&nbsp;</td><td></td><td></td><td></td></tr>    
           <tr><td>Default Dot Color:</td><td><input id="i_dotcolor" value="#800000" type="color" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dot Label (true/false):</td><td><input id="i_dotlabel" value="true" type="boolean" /></td></tr>  
           <tr><td>Dot Label Font Size (px):</td><td><input id="i_dotlabelfontsize" value="10" type="number"  min="4" max="50" step="1" /></td><td>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Dot Label Font Color:</td><td><input id="i_dotlabelfontcolor" value="#000000" type="color" /></td></tr>  
-
-          
         </table>
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" onclick="cancel();" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-default" onclick="reset();">Reset</button>        
-        <button type="button" class="btn btn-default" onclick="stylesubmit();" data-dismiss="modal">Submit</button>
-      </div>
+        <button type="button" class="btn btn-default" onclick="resetform();">Reset</button>        
+        <input type="submit" class="btn btn-default" onclick="stylesubmit();" value="Submit" />
+      </div></form>
     </div><!-- /.modal-content -->
   </div><!-- /.modal-dialog -->
 </div><!-- /.modal -->
