was missing datatree.js

--- a/custom.html
+++ b/custom.html
@@ -124,7 +124,7 @@
   <script src="js/custom.js" type="text/javascript"></script>
 
   <div id="datadiv">
-    <p><b>Created by:</b> <a href="https://www.colorado.gov/demography" target=
+    <p><b>Created by:</b> <a href="https://demography.dola.colorado.gov" target=
     "_blank">Colorado State Demography Office</a>&nbsp;&nbsp;&nbsp;<b>Project Homepage:</b> <a href="https://github.com/royhobbstn/D3_Quadrant" target=
     "_blank">Github: D3 Quadrant Chart</a></p>
   </div>
