--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </script><script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.1/js/bootstrap.min.js"
   type="text/javascript">
 </script><script src="https://d3js.org/d3.v3.min.js" type="text/javascript">
-</script><script src="../CensusAPI_Map/assets/js/datatree.js" type="text/javascript">
+</script><script src="data/datatree.js" type="text/javascript">
 </script><script src="js/createQuadrantChart.js" type="text/javascript">  
 </script><script src="js/saveSvgAsPng.js" type="text/javascript">    
 </script><script src="js/app.js" type="text/javascript">
@@ -141,7 +141,7 @@
 
   <div id="datadiv">
     <p><b>Data:</b> <a href="https://www.census.gov/acs/www/" target="_blank">ACS
-    2009-2013 5-Year Estimates</a>&nbsp;&nbsp;&nbsp;<b>Created by:</b> <a href="https://www.colorado.gov/demography" target=
+    2009-2013 5-Year Estimates</a>&nbsp;&nbsp;&nbsp;<b>Created by:</b> <a href="https://demography.dola.colorado.gov" target=
     "_blank">Colorado State Demography Office</a>&nbsp;&nbsp;&nbsp;<b>Project Homepage:</b> <a href="https://github.com/royhobbstn/D3_Quadrant" target=
     "_blank">Github: D3 Quadrant Chart</a></p>
   </div>
